--- a/Capa de Datos/CapaDatos.csproj
+++ b/Capa de Datos/CapaDatos.csproj
@@ -62,6 +62,15 @@
     <Compile Include="DataCliente.cs" />
     <Compile Include="DataSala.cs" />
     <Compile Include="DataUsuario.cs" />
+    <Compile Include="DetalleReserva.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Horario.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Instrumento.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -78,6 +87,9 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reserva.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Sala.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
