--- a/Capa de Datos/CapaDatos.csproj
+++ b/Capa de Datos/CapaDatos.csproj
@@ -62,6 +62,7 @@
     </Compile>
     <Compile Include="DataAdmin.cs" />
     <Compile Include="DataCliente.cs" />
+    <Compile Include="DataInstrumento.cs" />
     <Compile Include="DataSala.cs" />
     <Compile Include="DataUsuario.cs" />
     <Compile Include="DetalleReserva.cs">
