--- a/CapaReservas/CapaReservas.csproj
+++ b/CapaReservas/CapaReservas.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="GuardarUsuario.cs" />
     <Compile Include="IngresarUsuario.cs" />
+    <Compile Include="OpInstrumento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrarCliente.cs" />
   </ItemGroup>
