--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -90,6 +90,12 @@
     <Compile Include="FormRegistrarCliente.Designer.cs">
       <DependentUpon>FormRegistrarCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmGestionarCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGestionarCliente.Designer.cs">
+      <DependentUpon>FrmGestionarCliente.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmGestionInstrumentos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +127,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormRegistrarCliente.resx">
       <DependentUpon>FormRegistrarCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmGestionarCliente.resx">
+      <DependentUpon>FrmGestionarCliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGestionInstrumentos.resx">
       <DependentUpon>FrmGestionInstrumentos.cs</DependentUpon>
