Add Reserva en Capas

--- a/Capa de Datos/CapaDatos.csproj
+++ b/Capa de Datos/CapaDatos.csproj
@@ -60,6 +60,7 @@
     </Compile>
     <Compile Include="DataAdmin.cs" />
     <Compile Include="DataCliente.cs" />
+    <Compile Include="DataReserva.cs" />
     <Compile Include="DataSala.cs" />
     <Compile Include="DataUsuario.cs" />
     <Compile Include="DetalleReserva.cs">
