--- a/CapaReservas/CapaReservas.csproj
+++ b/CapaReservas/CapaReservas.csproj
@@ -45,6 +45,7 @@
     <Compile Include="IngresarUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrarCliente.cs" />
+    <Compile Include="RegistrarReserva.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Capa de Datos\CapaDatos.csproj">
