--- a/Capa de Datos/CapaDatos.csproj
+++ b/Capa de Datos/CapaDatos.csproj
@@ -62,7 +62,9 @@
     </Compile>
     <Compile Include="DataAdmin.cs" />
     <Compile Include="DataCliente.cs" />
+    <Compile Include="DataDetalleReserva.cs" />
     <Compile Include="DataInstrumento.cs" />
+    <Compile Include="DataReserva.cs" />
     <Compile Include="DataSala.cs" />
     <Compile Include="DataUsuario.cs" />
     <Compile Include="DetalleReserva.cs">
