--- a/CapaReservas/CapaReservas.csproj
+++ b/CapaReservas/CapaReservas.csproj
@@ -53,6 +53,7 @@
     <Compile Include="OpInstrumento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrarCliente.cs" />
+    <Compile Include="RegistrarReserva.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Capa de Datos\CapaDatos.csproj">
