--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -121,6 +121,18 @@
     <Compile Include="FrmReportePorGenero.Designer.cs">
       <DependentUpon>FrmReportePorGenero.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmReservasCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmReservasCliente.Designer.cs">
+      <DependentUpon>FrmReservasCliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmVerReservasAdministrador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmVerReservasAdministrador.Designer.cs">
+      <DependentUpon>FrmVerReservasAdministrador.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormIngresarAdministrador.resx">
@@ -155,6 +167,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmReportePorGenero.resx">
       <DependentUpon>FrmReportePorGenero.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmReservasCliente.resx">
+      <DependentUpon>FrmReservasCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmVerReservasAdministrador.resx">
+      <DependentUpon>FrmVerReservasAdministrador.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
