--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -109,6 +109,12 @@
     <Compile Include="FrmGestionInstrumentos.Designer.cs">
       <DependentUpon>FrmGestionInstrumentos.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmHorariosYSalas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmHorariosYSalas.Designer.cs">
+      <DependentUpon>FrmHorariosYSalas.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmListadoCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -161,6 +167,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGestionInstrumentos.resx">
       <DependentUpon>FrmGestionInstrumentos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmHorariosYSalas.resx">
+      <DependentUpon>FrmHorariosYSalas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmListadoCliente.resx">
       <DependentUpon>FrmListadoCliente.cs</DependentUpon>
