--- a/Capa de Datos/CapaDatos.csproj
+++ b/Capa de Datos/CapaDatos.csproj
@@ -66,6 +66,7 @@
     <Compile Include="DataHorario.cs" />
     <Compile Include="DataInstrumento.cs" />
     <Compile Include="DataReserva.cs" />
+    <Compile Include="DataReservaInstrumento.cs" />
     <Compile Include="DataSala.cs" />
     <Compile Include="DataUsuario.cs" />
     <Compile Include="DetalleReserva.cs">
@@ -94,6 +95,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reserva.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ReservaInstrumento.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Sala.cs">
