--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -109,6 +109,12 @@
     <Compile Include="FrmGestionInstrumentos.Designer.cs">
       <DependentUpon>FrmGestionInstrumentos.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmHorariosMasFrecuentados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmHorariosMasFrecuentados.Designer.cs">
+      <DependentUpon>FrmHorariosMasFrecuentados.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmHorariosYSalas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,6 +173,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGestionInstrumentos.resx">
       <DependentUpon>FrmGestionInstrumentos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmHorariosMasFrecuentados.resx">
+      <DependentUpon>FrmHorariosMasFrecuentados.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmHorariosYSalas.resx">
       <DependentUpon>FrmHorariosYSalas.cs</DependentUpon>
