--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -103,6 +103,12 @@
     <Compile Include="FrmClientesQueMasReservan.Designer.cs">
       <DependentUpon>FrmClientesQueMasReservan.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmDetalleReserva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDetalleReserva.Designer.cs">
+      <DependentUpon>FrmDetalleReserva.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmGestionarCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -176,6 +182,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmClientesQueMasReservan.resx">
       <DependentUpon>FrmClientesQueMasReservan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmDetalleReserva.resx">
+      <DependentUpon>FrmDetalleReserva.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGestionarCliente.resx">
       <DependentUpon>FrmGestionarCliente.cs</DependentUpon>
