--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -133,6 +133,12 @@
     <Compile Include="FrmHorariosYSalas.Designer.cs">
       <DependentUpon>FrmHorariosYSalas.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmInstrumentosReservadosPorFecha.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmInstrumentosReservadosPorFecha.Designer.cs">
+      <DependentUpon>FrmInstrumentosReservadosPorFecha.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmListadoCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -197,6 +203,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmHorariosYSalas.resx">
       <DependentUpon>FrmHorariosYSalas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmInstrumentosReservadosPorFecha.resx">
+      <DependentUpon>FrmInstrumentosReservadosPorFecha.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmListadoCliente.resx">
       <DependentUpon>FrmListadoCliente.cs</DependentUpon>
